# px4_offboard_cpp_ros2_foxy

./: CMakeLists.txt  README.md  README.md.md  package.xml
include/: 2024_Ti_demo.hpp  offboard_control_node.hpp
src/: 2024_Ti_demo.cpp  offboard_control_node.cpp  offboard_demo.cpp
